sfdx-source/force-app/main/default/objects/OrderItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>LEM-486 – Attributes related to Advertisement products</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>