sfdx-source/force-app/main/default/objects/OrderItem/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14233: It stores the Store Account value from Quote Line with Twin Field functionality.</description>
    <label>Store Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (Store Account)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>