sfdx-source/force-app/main/default/objects/OrderItem/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <description>LEM-21420 It is used to save store Id received from the portal</description>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>