sfdx-source/force-app/main/default/objects/OrderItem/fields/Subscription_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Rate_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-13931 Associated Subscription Rate Change</description>
    <label>Subscription Rate Change</label>
    <referenceTo>Subscription_Rate_Change__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>