sfdx-source/force-app/main/default/objects/OrderItem/fields/Term_Specific_Bidding__c.field-meta.xml
<CustomField>
    <fullName>Term_Specific_Bidding__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <label>Term-Specific Bidding</label>
    <length>250</length>
    <type>Text</type>
</CustomField>