sfdx-source/force-app/main/default/objects/OrderItem/fields/Trial_Commission__c.field-meta.xml
<CustomField>
    <fullName>Trial_Commission__c</fullName>
    <description>LEM-182: Initial Setup of Order Product</description>
    <label>Trial Commission</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>