sfdx-source/force-app/main/default/objects/OrderItem/fields/Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date__c</fullName>
    <description>LEM-182: Lookup to the Original Order Product</description>
    <formula>
    IF(
        NOT(ISBLANK(TEXT(SBQQ__QuoteLine__r.Trial_End_Date__c))),
        SBQQ__QuoteLine__r.Trial_End_Date__c,
        IF(
            AND(
                ISBLANK(TEXT(SBQQ__QuoteLine__r.Trial_End_Date__c)),
                NOT(ISBLANK(TEXT(Trial_Period__c))),
                NOT(ISBLANK(TEXT(Trial_Start_Date__c)))
            ),
            (Trial_Start_Date__c + VALUE(TEXT(Trial_Period__c))),
            null
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>