sfdx-source/force-app/main/default/objects/OrderItem/fields/Trial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trial_Fee__c</fullName>
    <description>LEM-182: Initial Setup of Order Product</description>
    <label>Trial Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>