sfdx-source/force-app/main/default/objects/OrderItem/fields/Trial_Marketing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trial_Marketing_Fee__c</fullName>
    <description>LEM:13960: Magic wand attribute.</description>
    <label>Trial Marketing Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>