sfdx-source/force-app/main/default/objects/OrderItem/fields/Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start_Date__c</fullName>
    <description>LEM-182: Lookup to the Original Order Product</description>
    <formula>IF( 
  AND( 
    ISBLANK(TEXT(SBQQ__QuoteLine__r.Trial_Period__c)) ,
    ISBLANK(TEXT(SBQQ__QuoteLine__r.Trial_End_Date__c)) 
  ),
  null,
  IF( 
    AND(
      ISPICKVAL(SBQQ__Status__c, &apos;Draft&apos;),
      Order.Account_Segment__c = &apos;SMB&apos;,
      OR(
        Package__c = &quot;Storefront&quot;,
        Package__c  = &quot;Custom Storefront Package&quot;
      )
    ),
    Order.Account.Proposed_Date_of_Implementation__c, 
    IF(
      ISPICKVAL(SBQQ__Status__c, &apos;Draft&apos;),
      Order.Account.Proposed_Date_of_Activation__c,
      ServiceDate
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>