sfdx-source/force-app/main/default/objects/OrderItem/fields/Undiscounted_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Undiscounted_Commission_Rate__c</fullName>
    <description>LEM-13626: This field will be added as a drawer attribute to capture the user input.</description>
    <label>Undiscounted Commission Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>