sfdx-source/force-app/main/default/objects/OrderItem/fields/User_Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Communication_Type__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <inlineHelpText>This field specifies the CRM type for the campaign</inlineHelpText>
    <label>User Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Communication_Type</valueSetName>
    </valueSet>
</CustomField>