sfdx-source/force-app/main/default/objects/OrderItem/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2445: It indicates parent Work Order of child Work Order corresponding to Work Order Type of Product associated with Order Product.</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>WorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>